--- a/index.html
+++ b/index.html
@@ -4,4 +4,8 @@
         <meta charset="UTF-8" />
         <title>Odin-recipes</title>
     </head>
+    <body>
+        <h1>Odin Recipes</h1>
+        <a href="recipes/gigot.html">Gigot a l'ail</a>
+    </body>
 </html>
