--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/gigot.html">Gigot a l'ail</a>
+        <ul>
+            <li><a href="recipes/gigot.html">Gigot a l'ail</a></li>
+            <li>
+                <a href="recipes/cassoulet_toulousain.html"
+                    >Cassoulet toulousain</a
+                >
+            </li>
+            <li></li>
+        </ul>
     </body>
 </html>
