add a new link for recipes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     >Cassoulet toulousain</a
                 >
             </li>
-            <li></li>
+            <li><a href="recipes/tartiflette.html">Tartiflette</a></li>
         </ul>
     </body>
 </html>
