add a style.css / modify the html for more style

--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <title>Odin-recipes</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/gigot.html">Gigot a l'ail</a></li>
-            <li>
-                <a href="recipes/cassoulet_toulousain.html"
-                    >Cassoulet toulousain</a
-                >
-            </li>
-            <li><a href="recipes/tartiflette.html">Tartiflette</a></li>
-        </ul>
+        <div class="container"></div>
+        <div class="menu">
+            <h2>Nos recettes</h2>
+            <ul class="recipes">
+                <li><a href="recipes/gigot.html">Gigot a l'ail</a></li>
+                <li>
+                    <a href="recipes/cassoulet_toulousain.html"
+                        >Cassoulet toulousain</a
+                    >
+                </li>
+                <li><a href="recipes/tartiflette.html">Tartiflette</a></li>
+            </ul>
+        </div>
     </body>
 </html>
